--- a/Client/src/styles/Flashcard.css
+++ b/Client/src/styles/Flashcard.css
@@ -1,15 +1,18 @@
 .card {
   display: flex;
-  width: 400px;
-  height: 200px;
+  width: 500px;
+  height: 300px;
   background-color: darkturquoise;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: 400;
+  border-radius: 15px;
 }
 
 .tittel {
   /* height: fit-content; */
-  font-size: 26px;
+  font-size: 40px;
+  color: black;
+  /* font-family: 'Courier New', Courier, monospace; */
 }
