--- a/Client/src/styles/App.css
+++ b/Client/src/styles/App.css
@@ -1,3 +1,45 @@
 #root {
   max-width: 100vw
 }
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: cadetblue;
+  width:100%;
+  height: 70px;
+}
+
+
+.HomeButton,
+.Login {
+  margin-right: 20px;
+}
+
+.webName {
+  font-size: 280%;
+  padding-left: 18px;
+  
+  
+  color: #9d21b067
+}
+
+.Login{
+  justify-content: space-evenly;
+  display: flex;
+}
+
+.LoginButton{
+  padding-inline: 9px;
+}
+
+.SignInButton{
+  padding-inline: 9px;
+}
+
