--- a/Client/src/styles/App.css
+++ b/Client/src/styles/App.css
@@ -1,5 +1,10 @@
 #root {
   max-width: 100vw
+  
+}
+
+*{
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .wrapper {
@@ -25,8 +30,6 @@
 .webName {
   font-size: 280%;
   padding-left: 58px;
-  
-  
   color: #9d21b067
 }
 
@@ -46,4 +49,10 @@
 .HomeButton{
   margin-left: 10px;
 }
+
+.welMessage {
+  padding: 45px;
+  
+}
+
 
