--- a/Client/src/styles/SignUp.css
+++ b/Client/src/styles/SignUp.css
@@ -1,9 +1,4 @@
 .form{
-    
-    color: #218fd9b7;
-    width: 100px;
-    height: 40px;
-    
     border-radius: 15px;
     font-size: 14px;
     font-family: 'Courier New', Courier, monospace;
@@ -11,16 +6,5 @@
 }
 
 .headerSignUp{
-    color: #218fd9b7;
-    
-    border-bottom: #898585;
-    padding: 10px 10px
-}
-
-.input{
-    padding: 10px 20px;
-}
-.signUpButton{
-    padding: 10px 20px;
-
+    border-bottom: 1px solid white;
 }
