lagt kobling fra frontend til database for mine sett og laget brukergrensesnitt
co-author @orjankj

--- a/Client/src/styles/FlashcardContainer.css
+++ b/Client/src/styles/FlashcardContainer.css
@@ -1,6 +1,8 @@
-.FlashcardContainer {
+.flashcardContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+}
+#backButton {
+  margin-bottom: 100px;
 }
