--- a/Client/src/styles/App.css
+++ b/Client/src/styles/App.css
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: cadetblue;
+  background-color: gray;
   width:100%;
   height: 70px;
 }
@@ -30,7 +30,7 @@
 .webName {
   font-size: 280%;
   padding-left: 58px;
-  color: #9d21b067
+  color: black
 }
 
 .Login{
