--- a/Client/src/styles/UserOverview.css
+++ b/Client/src/styles/UserOverview.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: black;
 }
 
 #userList{
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 10px;
-    width: 300px;
+    width: 500px;
 }
