--- a/Client/src/styles/FlashcardContainer.css
+++ b/Client/src/styles/FlashcardContainer.css
@@ -2,7 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 75%;
 }
 #backButton {
   margin-bottom: 100px;
+}
+.flashcards{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.frontpageHeader{
+  width: 100%;
 }
