--- a/Client/src/styles/Button.css
+++ b/Client/src/styles/Button.css
@@ -8,6 +8,8 @@
   font-weight: bold;
   border: 3px solid #404040;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
 }
 
 .defaultButton:hover {
