--- a/Client/src/styles/FlashcardSetsOverview.css
+++ b/Client/src/styles/FlashcardSetsOverview.css
@@ -49,13 +49,16 @@
   justify-content: center;
   align-items: center ;
   position: absolute;
-  top: -7%;
+  top: -3%;
   right: -10%;
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 50px;
+  text-align: center;
   border-radius: 10px;
   background-color: #8b0008;
-
+  font-weight: 600;
+  font-size:larger
+  
 }
 
 .likeButton {
