--- a/Client/src/styles/MySets.css
+++ b/Client/src/styles/MySets.css
@@ -1,5 +1,13 @@
 .mySetsHeader{
-    padding: 20px;
-    justify-content:center;
-    text-align: center;
+    padding-top: 45px;
+    padding-left: 10%;
+    color: black;
+}
+
+.mySetContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
