--- a/Client/src/styles/UserInterface.css
+++ b/Client/src/styles/UserInterface.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     width: 200px;
     position: absolute;
+    column-gap: 10px;
     top: 145%;
     right: 0;
     background-color: gray;
